src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Founder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent/Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SDR_Assign_Date__c</fullName>
        <label>SDR Assign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SDR_First_Modified_Date_Time__c</fullName>
        <label>SDR First Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SDR__c</fullName>
        <description>Name of SDR on basis of Owner or PreviousOwner</description>
        <formula>IF(ISPICKVAL(Stage__c , &apos;SAL&apos;) || ISPICKVAL(Stage__c , &apos;SRL&apos;) || ISPICKVAL(Stage__c , &apos;MQL&apos;), (
  IF(ISPICKVAL(Status, &apos;Interested&apos;), (PreviousOwner__r.FirstName &amp; &quot; &quot; &amp; PreviousOwner__r.LastName), (Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName ))
), (
  IF(ISPICKVAL(Stage__c , &apos;SQL&apos;) || ISPICKVAL(Stage__c , &apos;SDL&apos;), (PreviousOwner__r.FirstName &amp; &quot; &quot; &amp; PreviousOwner__r.LastName), null)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Breached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA Breached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seats_Needed__c</fullName>
        <description>Estimated number of seats to be used.</description>
        <label>Seats Needed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName &amp;  BR() &amp;
Owner:User.UserRole.Name &amp; &quot; - &quot; &amp; KA_Territory__c &amp;  BR() &amp; 
&quot;Tel:&quot; &amp; Owner:User.Extension</formula>
        <label>Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageLastUpdatedDate__c</fullName>
        <label>Stage Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StageToMQLDate__c</fullName>
        <label>Stage to MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StageToSALDate__c</fullName>
        <label>Stage to SAL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StageToSDLDate__c</fullName>
        <label>Stage to SDL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StageToSQLDate__c</fullName>
        <label>Stage to SQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StageToSRLDate__c</fullName>
        <label>Stage to SRL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>MQL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StatusLastUpdatedDate__c</fullName>
        <label>Status Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusToContactedDate__c</fullName>
        <label>Status to Contacted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusToInterestedDate__c</fullName>
        <label>Status to Interested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusToNurtureDate__c</fullName>
        <label>Status to Nurture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusToQualifiedDate__c</fullName>
        <label>Status to Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusToUnresponsiveDate__c</fullName>
        <label>Status to Unresponsive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <formula>&quot;Trial&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Size__c</fullName>
        <label>Team Size</label>
        <picklist>
            <picklistValues>
                <fullName>1-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>The_number_of_seats__c</fullName>
        <defaultValue>0</defaultValue>
        <label>The number of seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Activity__c</fullName>
        <description>IF(AND((DATETIMEVALUE(LastModifiedDate) - DATETIMEVALUE(StageToSALDate__c)) &lt; (DATETIMEVALUE(LastActivityDate) - DATETIMEVALUE(StageToSALDate__c)), (DATETIMEVALUE(LastModifiedDate) - DATETIMEVALUE(StageToSALDate__c)) != 0), (DATETIMEVALUE(LastModifiedDate) - DATETIMEVALUE(StageToSALDate__c)), (DATETIMEVALUE(LastActivityDate) - DATETIMEVALUE(StageToSALDate__c)))</description>
        <formula>IF( AND( ( DATETIMEVALUE( LastModifiedDate ) - DATETIMEVALUE( CreatedDate ) ) &lt; ( DATETIMEVALUE( LastActivityDate ) - DATETIMEVALUE( CreatedDate ) ), ( DATETIMEVALUE( LastModifiedDate ) - DATETIMEVALUE( CreatedDate ) ) != 0 ), ( DATETIMEVALUE( LastModifiedDate ) - DATETIMEVALUE( CreatedDate ) ), ( DATETIMEVALUE( LastActivityDate ) - DATETIMEVALUE( CreatedDate ) ) ) * 24</formula>
        <inlineHelpText>IF( ( DATETIMEVALUE(  NOW()  ) - DATETIMEVALUE( LastModifiedDate ) ) &lt; ( DATETIMEVALUE( NOW() ) - DATETIMEVALUE( LastActivityDate ) ), DATETIMEVALUE(  NOW()  ) - DATETIMEVALUE( LastModifiedDate ), DATETIMEVALUE( NOW() ) - DATETIMEVALUE( LastActivityDate )</inlineHelpText>
        <label>Time to Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimelineToPurchase__c</fullName>
        <label>Timeline to Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 1 week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 week - 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Days+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timeline_determined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timeline determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_Expiry_Date__c</fullName>
        <formula>Instance__r.Expiry_Date__c</formula>
        <label>Trial Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trial_Expiry__c</fullName>
        <description>Trial expiry date</description>
        <inlineHelpText>Instance Trial expiry date</inlineHelpText>
        <label>Old Trial Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UniqueEmail__c</fullName>
        <label>Unique Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Unresponsive__c</fullName>
        <description>True, if the lead was once unresponsive</description>
        <formula>IF( NOT(ISBLANK(StatusToUnresponsiveDate__c)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unresponsive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsedFor__c</fullName>
        <label>Need</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal stakeholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X15_minute_notification__c</fullName>
        <formula>NOW()- 0.02764</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>15 minute notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X5_minute_notification__c</fullName>
        <formula>NOW()- 0.038</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 minute notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>adroll__ClickConversion__c</fullName>
        <description>Conversion Rate For Clicks</description>
        <inlineHelpText>Conversion Rate For Clicks</inlineHelpText>
        <label>Click Conversion (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>adroll__ClickCosts__c</fullName>
        <description>Costs Incurred for the Clicks</description>
        <inlineHelpText>Costs Incurred for the Clicks</inlineHelpText>
        <label>Lead Click Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>adroll__Click_Conversion__c</fullName>
        <formula>adroll__ClickConversion__c*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Click Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__Clicks__c</fullName>
        <description>Number of Clicks for the Email Address</description>
        <inlineHelpText>Number of Clicks for the Email Address</inlineHelpText>
        <label>Lead Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__ImpressionCosts__c</fullName>
        <description>Costs Incurred for the Impressions</description>
        <inlineHelpText>Costs Incurred for the Impressions</inlineHelpText>
        <label>Lead Impression Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>adroll__Impressions_External_ID__c</fullName>
        <description>Impressions External ID mirrors Impressions__c field, this field is only used for data purposes, it should not be added to any page layouts or reports.</description>
        <externalId>true</externalId>
        <label>Impressions External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__Impressions__c</fullName>
        <description>Number of Impressions for the user</description>
        <inlineHelpText>Number of Impressions for the user</inlineHelpText>
        <label>Lead Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__LastAdRollTrackingDate__c</fullName>
        <description>Latest Date of the Tracking Data Occurrence</description>
        <inlineHelpText>Latest Date of the Tracking Data Occurrence</inlineHelpText>
        <label>Lead Last RollWorks Tracking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>adroll__ViewConversion__c</fullName>
        <description>Conversion Rate for Views</description>
        <inlineHelpText>Conversion Rate for Views</inlineHelpText>
        <label>View Conversion (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>adroll__View_Conversion__c</fullName>
        <formula>adroll__ViewConversion__c*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead View Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Campaign__c</fullName>
        <description>utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product.</description>
        <inlineHelpText>utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product.</inlineHelpText>
        <label>First UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Content__c</fullName>
        <description>utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad. For example, if you have two call-to-action links within the same email message, you can use utm_content and set different values for each so you can tell which version is more effective.</description>
        <inlineHelpText>utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad.</inlineHelpText>
        <label>First UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Medium__c</fullName>
        <description>utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter.</description>
        <inlineHelpText>utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter.</inlineHelpText>
        <label>First UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Source__c</fullName>
        <description>utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard.</description>
        <inlineHelpText>utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard.</inlineHelpText>
        <label>First UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Term__c</fullName>
        <description>utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword</description>
        <inlineHelpText>utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword</inlineHelpText>
        <label>First UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Tracked__c</fullName>
        <formula>IF( cloudamp__GA_Tracker_Score__c  &gt; 0, &quot;Tracked&quot;, &quot;Not Tracked&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GA Tracked</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Tracker_Score__c</fullName>
        <description>A score of 0-5 that simply indicates how many of the Google Analytics Campaign parameters were captured from the URL the visitor clicked on.</description>
        <formula>IF( ISBLANK( cloudamp__GA_Campaign__c ) , 0, 1)  +  IF( ISBLANK( cloudamp__GA_Content__c ) , 0, 1)  +  IF( ISBLANK(  cloudamp__GA_Medium__c  ) , 0, 1)  +  IF( ISBLANK(  cloudamp__GA_Source__c  ) , 0, 1)  +  IF( ISBLANK(  cloudamp__GA_Term__c  ) , 0, 1)</formula>
        <inlineHelpText>A score of 0-5 that simply indicates how many of the Google Analytics Campaign parameters were captured from the URL the visitor clicked on.</inlineHelpText>
        <label>GA Tracker Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloudamp__Initial_Source__c</fullName>
        <description>This field tracks the Lead initial referral source from the session history data.</description>
        <label>Initial Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Keyword__c</fullName>
        <description>The search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</description>
        <inlineHelpText>The search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</inlineHelpText>
        <label>First Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_GA_Campaign__c</fullName>
        <description>Last utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product.</description>
        <inlineHelpText>Last utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product.</inlineHelpText>
        <label>Last UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_GA_Content__c</fullName>
        <description>last utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad. For example, if you have two call-to-action links within the same email message, you can use utm_content and set different values for each so you can tell which version is more effective.</description>
        <inlineHelpText>last utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad.</inlineHelpText>
        <label>Last UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_GA_Medium__c</fullName>
        <description>last utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter.</description>
        <inlineHelpText>utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter.</inlineHelpText>
        <label>Last UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_GA_Source__c</fullName>
        <description>last utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard.</description>
        <inlineHelpText>last utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard.</inlineHelpText>
        <label>Last UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_GA_Term__c</fullName>
        <description>Last utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword</description>
        <inlineHelpText>Last utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword</inlineHelpText>
        <label>Last UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_Keyword__c</fullName>
        <description>The last search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</description>
        <inlineHelpText>The last search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</inlineHelpText>
        <label>Last Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_Lead_Source_Type__c</fullName>
        <description>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</description>
        <inlineHelpText>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</inlineHelpText>
        <label>Last Lead Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_Paid_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means they clicked on an organic search result, or the visit was not a search.</description>
        <inlineHelpText>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means it was an organic search result or it was not search.</inlineHelpText>
        <label>Last Paid Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_Referrer__c</fullName>
        <description>The last Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</description>
        <inlineHelpText>The last Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</inlineHelpText>
        <label>Last Referrer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_Search_Engine__c</fullName>
        <description>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</description>
        <inlineHelpText>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</inlineHelpText>
        <label>Last Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_gclid__c</fullName>
        <description>The Ad click ID from Google Adwords.</description>
        <inlineHelpText>The Ad click ID from Google Adwords.</inlineHelpText>
        <label>Last gclid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Lead_Source_Type__c</fullName>
        <description>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</description>
        <inlineHelpText>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</inlineHelpText>
        <label>First Lead Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cloudamp__Noncampaign_Lead_Type__c</fullName>
        <formula>IF(cloudamp__GA_Medium__c = &quot;referral&quot;, &quot;Referral&quot;,  IF( cloudamp__GA_Campaign__c  = &quot;(direct)&quot;, &quot;Direct&quot;,  IF(cloudamp__GA_Medium__c = &quot;organic&quot;, &quot;Organic&quot;, IF( cloudamp__Paid_Search__c = true, &quot;Paid Search&quot;, null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Campaign Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Paid_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means they clicked on an organic search result, or the visit was not a search.</description>
        <inlineHelpText>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means it was an organic search result or it was not search.</inlineHelpText>
        <label>First Paid Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cloudamp__Referrer__c</fullName>
        <description>The Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</description>
        <inlineHelpText>The Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</inlineHelpText>
        <label>First Referrer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cloudamp__Search_Engine__c</fullName>
        <description>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</description>
        <inlineHelpText>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</inlineHelpText>
        <label>First Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__data__c</fullName>
        <description>This is the integration field where tracking data from the CloudAmp Campaign Tracker goes into newly created leads.</description>
        <inlineHelpText>This is the integration field where tracking data from the CloudAmp Campaign Tracker goes into newly created leads.</inlineHelpText>
        <label>data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cloudamp__gclid__c</fullName>
        <description>The Ad click ID from Google Adwords.</description>
        <inlineHelpText>The Ad click ID from Google Adwords.</inlineHelpText>
        <label>First gclid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Campaign__c</fullName>
        <label>First Click Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Channel__c</fullName>
        <label>First Click Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Content__c</fullName>
        <label>First Click Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Landing_Page__c</fullName>
        <label>First Click Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Medium__c</fullName>
        <label>First Click Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Referrer__c</fullName>
        <label>First Click Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Source__c</fullName>
        <label>First Click Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Term__c</fullName>
        <label>First Click Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Google_Analytics_Client_ID__c</fullName>
        <label>Google Analytics Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Google_Analytics_Link__c</fullName>
        <formula>HYPERLINK( (&quot;https://analytics.google.com/analytics/web/#report/visitors-user-activity/a72840801w110617423p115383936/%3F_r.userId%3D&quot; &amp; gaconnector_Google_Analytics_Client_ID__c &amp; &quot;%26_r.userListReportStates%3D%26_r.userListReportId%3Dvisitors-legacy-user-id/&quot;), &quot;Open in Google Analytics&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Analytics Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_IP_Address__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Campaign__c</fullName>
        <label>Last Click Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Channel__c</fullName>
        <label>Last Click Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Content__c</fullName>
        <label>Last Click Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Landing_Page__c</fullName>
        <label>Last Click Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Medium__c</fullName>
        <label>Last Click Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Referrer__c</fullName>
        <label>Last Click Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Source__c</fullName>
        <label>Last Click Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Term__c</fullName>
        <label>Last Click Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Latitude_from_IP__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>